Create form to collect users input and add styling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
         volumes: 
             - "/app/node_modules"
             - "./:/app"
+    
+    test:
+        container_name: react-app-test
+        build:
+            context: .
+            dockerfile: Dockerfile.dev
+        volumes:
+            - "/app/node_modules"
+            - "./:/app"
+        environment: 
+            - CI=true
+        command: npm test
